--- a/Index.css
+++ b/Index.css
@@ -90,7 +90,13 @@ body {
   /* justify-content: center; */
   background-color: #fdfdfd;
 }
+.Inbox {
+  background-color: rgb(241, 228, 228);
+  display: flex;
+  flex-direction: column;
 
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.897);
+}
 .buttonCom {
   height: 70px;
   width: 600px;
@@ -99,10 +105,10 @@ body {
   font-size: 100px;
   letter-spacing: 2px;
   color: #ffffff;
-  background: #f0906d;
+  background: #095331d5;
   border: none;
   border-radius: 10px;
-  box-shadow: 12px 12px 24px rgba(228, 109, 54, 0.897);
+  box-shadow: 8px 8px 8px rgba(16, 59, 12, 0.815);
   transition: all 0.3s ease-in-out 0s;
   cursor: pointer;
   outline: none;
@@ -124,7 +130,6 @@ body {
   color: #8eeb72;
   transform: translateY(-7px);
   border-radius: 10px;
-  background: #ec5720;
 }
 
 .buttonCom:hover::before,
@@ -171,7 +176,8 @@ body {
 .BoxUser {
   width: 900px;
   height: 100px;
-  background-color: #6b6e6b8f;
+  background: linear-gradient(133.32deg, #afb8ad, hsla(54, 41%, 81%, 0.925)),
+    #c9cce7;
   border-radius: 10px;
   cursor: pointer;
   /* margin-left: 325px; */
@@ -185,31 +191,48 @@ body {
   flex-direction: column;
   justify-content: flex-start;
 }
+.effect {
+  height: 100%;
+  background-color: #03a96b;
+  width: 10px;
+  /* margin-right:px; */
+}
 .CommunityV2 {
   font-size: 30px;
-  color: #22ce47;
+  color: #010803;
   text-align: center;
   font-family: "Prompt";
   margin: 0 auto;
+  font-weight: 500;
+  display: flex;
+  margin-left: 20px;
+  /* flex-direction: column; */
+  /* justify-items: flex-start; */
+}
+
+.z {
+  display: flex;
+  height: 100%;
 }
 .ZoneNumber {
   width: 70px;
-  height: 100px;
+  height: 100%;
   border-radius: 10px;
-  background-color: #02bc77;
+  background-color: #0b6069;
   font-family: "Prompt";
   font-size: 50px;
   display: flex;
   justify-content: center;
-  color: #ffffffad;
+  color: #dbd8d8;
   text-align: center;
   align-items: center;
+  font-weight: 600;
 }
 .ZoneQuestion {
   margin-left: 10px;
-  margin-top: 20px;
+  /* margin-top: 20px; */
   width: 500px;
-  height: 100%;
+  height: 100% inherit;
   display: flex;
   justify-content: center;
   border-radius: 5px;
@@ -217,14 +240,15 @@ body {
 }
 .ZoneButton {
   margin-left: 10px;
-  margin-top: 25px;
   width: 250px;
-  height: 100px;
-
-  float: left;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  display: flex;
 }
 .B1 {
-  background-color: #26bb3a;
+  background-color: #4b4646;
+  /* background-color: #03a96b; */
   color: #e4e6e5;
   border-radius: 10px;
   border-style: none;
@@ -232,11 +256,10 @@ body {
   height: 60px;
   font-family: "kanit", sans-serif;
 }
-.B1:hover,
-.B1:focus {
-  background-color: #1b8817;
+.B1:hover {
+  background-color: rgba(0, 0, 0, 0.664);
   transform: translateY(-7px);
-  font-size: 18px;
+
   transition: all 0.3s ease-in-out 0s;
 }
 .iconB {
@@ -245,7 +268,7 @@ body {
   margin-right: 2px;
 }
 .B2 {
-  background-color: #1b1b17c4;
+  background-color: #4ebd6a;
   margin-left: 10px;
   color: #e4e6e5;
   border-radius: 10px;
@@ -254,28 +277,39 @@ body {
   height: 60px;
   font-family: "kanit", sans-serif;
 }
-.B2:hover,
-.B2:focus {
-  background-color: #1b1b1bf5;
+.B2:hover {
+  background-color: #f5f3f3f5;
   transform: translateY(-7px);
   transition: all 0.3s ease-in-out 0s;
-  font-size: 18px;
+
+  color: #161817;
 }
 
 .nameCV2 {
   font-family: "Prompt";
-  font-size: 20px;
-  color: rgb(0, 0, 0);
-  /* margin-right: 24rem; */
+  font-size: 18px;
+  color: #dee6df;
+  background-color: #03a96b;
+  width: 200px;
+  height: 30px;
+  align-items: center;
+  border-radius: 8px;
+  margin-left: 20px;
+  margin-top: 8px;
 }
 .itemQ {
   font-family: "Prompt";
   font-size: 20px;
-  color: rgb(255, 249, 249);
+  color: rgb(0, 0, 0);
   text-align: center;
-  max-height: 25vh;
+  /* max-height: 25vh; */
 }
-.Answer {
+.desc {
+  font-family: "Prompt";
+  font-size: 20px;
+  padding-left: 20px;
+}
+/* .Answer {
   width: 400px;
   height: 35px;
   margin-left: 28px;
@@ -283,7 +317,14 @@ body {
   font-family: "Prompt";
   font-size: 15px;
   color: #000000;
-  border-style: solid;
+  border-style: none;
+  text-align: center;
+} */
+.newAnswer {
+  text-align: center;
+}
+.Answer.B1:hover {
+  border-style: none;
 }
 .TextareaModalText {
   height: 150px;
@@ -321,23 +362,26 @@ body {
 }
 
 .BackHome {
-  width: 150px;
-  height: 50px;
+  width: 130px;
+  height: 30px;
   font-family: "Prompt";
-  border-radius: 5px;
+  border-radius: 2px;
   color: rgb(92, 87, 87);
   margin-right: 30px;
   margin-top: 10px;
-  border-style: solid;
+  border: 1px solid;
+  border-color: rgb(150, 141, 141);
   justify-content: flex-end;
+  display: flex;
+  align-items: center;
+
   /* position: static; */
 }
 .BackHome:hover {
-  text-decoration: none;
   font-family: "Prompt";
-  border-radius: 5px;
+  border-radius: 2px;
   color: rgb(0, 0, 0);
-  background-color: rgba(175, 168, 168, 0.925);
+  background-color: rgba(188, 194, 188, 0.925);
 }
 
 /*                 RESPONSIVE                             */
@@ -403,36 +447,52 @@ body {
     display: flex;
     justify-content: center;
     flex-direction: column;
+    align-items: center;
   }
   .BackHome {
-    margin-right: 0px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    margin-left: 30px;
   }
   .BoxUser {
     width: 340px;
     height: 200px;
     margin-right: 7px;
   }
+  .nameCV2 {
+    font-size: 18px;
+    border-radius: 8px;
+    margin-left: 60px;
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
+    display: flex;
+  }
   .CommunityV2 {
     /* position: absolute; */
     width: 340px;
+    display: flex;
+    flex-direction: column;
     margin-right: 0px;
-    margin-left: 17px;
+    /* margin: 0 auto; */
   }
   .ZoneNumber {
     width: 100%;
     height: 35px;
     border-radius: 10px;
-    background-color: #02bc77;
     font-family: "Prompt";
     font-size: 25px;
     font-weight: 700;
-    color: #000000ad;
   }
   .ZoneQuestion {
     width: 300px;
     position: absolute;
     margin-top: 40px;
     height: 10vh;
+  }
+  .itemQ {
+    font-size: 18px;
   }
   .ZoneButton {
     width: 250px;
@@ -472,13 +532,9 @@ body {
     clear: both;
     justify-content: center;
   }
-  .BackHome {
-    width: 250px;
-  }
 }
 @media (min-width: 600px) {
   .SelectCommunity {
-    /* margin-right: 350px; */
     width: 400px;
     margin: 0;
   }
@@ -488,31 +544,17 @@ body {
     background-color: #6b6e6b8f;
     border-radius: 10px;
     cursor: pointer;
-    /* margin-left: 325px; */
+
     margin-top: 20px;
   }
   .B1 {
     width: 90px;
     height: 60px;
   }
-  .B1:hover,
-  .B1:focus {
-    font-size: 10px;
-  }
+
   .B2 {
     width: 80px;
     height: 60px;
-  }
-  .B2:hover,
-  .B2:focus {
-    font-size: 10px;
-  }
-  .BackHome {
-    width: 180px;
-    height: 50px;
-
-    /* justify-content: flex-start; */
-    /* position: static; */
   }
 }
 @media (min-width: 1030px) {
