--- a/Index.css
+++ b/Index.css
@@ -1,148 +1,183 @@
-้้html {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 body {
   height: 100vh;
   width: 100vw;
   font-family: "Prompt";
   /* clear: both; */
 }
-.pageA-grid {
+.Grid {
   margin: 0;
   padding: 0;
   display: grid;
-  height: auto;
+  grid-template-columns: 1fr 8fr 1fr;
   height: 100vh;
-  background-color: rgb(0, 0, 0);
-  grid-gap: 5px;
+  background-color: rgb(255, 255, 255);
 }
-
-.grid-items3 {
+.GridLeft {
+  height: 100vh;
+  border-style: solid;
+  border-width: 2px;
+  border-color: #e4e6e5;
+}
+.GridRight {
+  height: 100vh;
+  border-style: solid;
+  border-width: 2px;
+  border-color: #e4e6e5;
+}
+.GridMain {
   /* border: 5px solid rgb(248, 240, 240); */
-  height: 100%;
-  width: 100%;
-  background-color: rgb(248, 242, 242);
+  height: 100vh;
+  border-style: solid;
+  border-width: 2px;
+  border-color: #e4e6e5;
 }
 /* PageAversion2 */
-.colorback {
-  background-color: rgb(240, 233, 233);
-}
-.welcome {
-  font-family: "Prompt";
-  padding-left: 1rem;
-  padding-top: 1rem;
-  font-size: 25px;
-  outline: none;
-  color: #444344;
-}
-.DateHeader {
-  font-family: "Prompt";
-  padding-left: 1rem;
-  color: #02bc77;
-}
-.MessageHeader {
-  height: 60px;
-  /* margin-top: 5px; */
-  font-family: "Prompt";
-  font-size: 20px;
-  font-weight: 500;
-  text-align: center;
-  background: linear-gradient(133.32deg, #5ec1d4, hsla(0, 0%, 100%, 0)), #c2e9fb;
+.sizeBox {
+  width: 900px;
   display: flex;
   justify-content: center;
 }
 
-.SelectCommunity {
-  font-family: "Prompt";
-  font-size: 20px;
-  align-items: none;
-  padding: 1em;
-  /* border-style: solid; */
-  color: #444344;
-  margin-right: 500px;
-}
-.logoKU {
-  width: 70px;
-  height: 70px;
-  margin-right: 20px;
-}
-.CommunityName {
-  font-family: "Prompt";
-  text-align: center;
-  font-size: 25px;
-  color: rgb(255, 255, 255);
-  border-radius: 20px;
-}
 .BoxPageA {
-  height: 100vh;
-  width: 100vw;
-  border-style: solid;
-  border-width: 10px;
-  border-color: rgb(240, 233, 233);
-  border-radius: 10px;
+  border-color: #e4e6e5;
   flex-direction: column;
   align-items: center;
   display: flex;
-  /* float: right; */
-  /* justify-content: center; */
   background-color: #fdfdfd;
+  /* margin: 20px; */
 }
 .Inbox {
-  background-color: rgb(241, 228, 228);
+  background-color: #dbdfdd;
   display: flex;
   flex-direction: column;
-
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.897);
 }
+.HostLine {
+  margin-right: 370px;
+}
+.Line1 {
+  display: flex;
+  text-align: center;
+  justify-items: center;
+  align-items: center;
+}
+.L11 {
+  background-color: #03a96b;
+  width: 8px;
+  height: 60px;
+  margin-top: 15px;
+}
+.L12 {
+  font-size: 35px;
+  font-weight: 500;
+  font-family: "Prompt";
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  margin-left: 10px;
+  margin-top: 20px;
+}
+.L13 {
+  font-family: "Prompt";
+  margin-left: 15px;
+  background-color: #a9b9ce;
+  height: fit-content;
+  width: 150px;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  margin-top: 20px;
+}
+.Line2 {
+  display: flex;
+  margin-top: 5px;
+  margin-bottom: 50px;
+}
+.L21 {
+  background-color: #03a96b;
+  height: fit-content;
+  width: 150px;
+  border-radius: 15px;
+  font-family: "Prompt";
+  color: #ffffff;
+  text-align: center;
+}
+.L22 {
+  background-color: #a5d5c2;
+  font-family: "Prompt";
+  margin-left: 15px;
+  border-radius: 5px;
+  width: 300px;
+  text-align: center;
+}
+.tab {
+  background-color: #535554;
+  width: 8px;
+  height: 60px;
+  margin-top: 15px;
+}
+.numberIndex {
+  margin-top: 15px;
+  background-color: #a7abab;
+  width: 70px;
+  height: 60px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  font-weight: 500;
+  margin-bottom: 15px;
+}
 .buttonCom {
-  height: 70px;
+  height: 60px;
   width: 600px;
-  margin: 0.2em;
+  /* margin: 0.2em; */
+  margin-top: 15px;
   text-transform: uppercase;
   font-size: 100px;
-  letter-spacing: 2px;
-  color: #ffffff;
-  background: #095331d5;
+  /* letter-spacing: 2px; */
+  color: #212221;
+  background: #cccecc;
   border: none;
-  border-radius: 10px;
-  box-shadow: 8px 8px 8px rgba(16, 59, 12, 0.815);
-  transition: all 0.3s ease-in-out 0s;
-  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   outline: none;
-  padding: 10px;
+  /* padding: 10px; */
 }
 
-.buttonCom::before {
-  border: 6px solid #92e978;
-  box-shadow: 0 0 60px rgba(16, 245, 35, 0.925);
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  opacity: 0;
+.keyNextpage {
+  margin-top: 25px;
+  margin-left: 5px;
   transition: all 0.3s ease-in-out 0s;
+  width: 140px;
+  height: 40px;
+  border-radius: 5px;
+  background-color: #1aaf58;
+  border-style: solid;
+  border-color: #05aa6c;
+  font-family: "Prompt";
+  color: #dbd8d8;
 }
-
-.buttonCom:hover,
-.buttonCom:focus {
-  color: #8eeb72;
+.keyNextpage:hover {
   transform: translateY(-7px);
-  border-radius: 10px;
+  width: 160px;
+  height: 60px;
 }
-
-.buttonCom:hover::before,
-.buttonCom:focus::before {
-  opacity: 1;
-  border-radius: 10px;
+.settingCom {
+  color: rgba(0, 0, 0, 0.74);
+  font-family: "Prompt";
+  font-size: 18px;
+  font-weight: 600;
 }
-.buttonCom:hover::after,
-.buttonCom:focus::after {
-  animation: none;
-  display: none;
+.icon {
+  width: 30px;
 }
-
 /* Userscreen */
 
 .navv {
@@ -173,17 +208,17 @@ body {
 }
 
 /*                PageBversion2                          */
-.BoxUser {
-  width: 900px;
+/* .BoxUser {
+  width: 800px;
   height: 100px;
-  background: linear-gradient(133.32deg, #afb8ad, hsla(54, 41%, 81%, 0.925)),
-    #c9cce7;
+  background-color: #c4c9c6;
   border-radius: 10px;
-  cursor: pointer;
-  /* margin-left: 325px; */
-
   margin-top: 20px;
-}
+  display: flex;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+} */
 .version2 {
   background-color: #ffffff;
   align-items: center;
@@ -191,42 +226,123 @@ body {
   flex-direction: column;
   justify-content: flex-start;
 }
-.effect {
-  height: 100%;
-  background-color: #03a96b;
-  width: 10px;
-  /* margin-right:px; */
-}
-.CommunityV2 {
-  font-size: 30px;
-  color: #010803;
-  text-align: center;
-  font-family: "Prompt";
-  margin: 0 auto;
-  font-weight: 500;
+.Inbox2 {
+  margin-top: 20px;
+  background-color: #dbdfdd;
   display: flex;
-  margin-left: 20px;
-  /* flex-direction: column; */
-  /* justify-items: flex-start; */
+  flex-direction: column;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.897);
+}
+.HostK {
+  /* margin-left: 30px; */
+  display: flex;
+  justify-items: center;
+  flex-direction: column;
+  /* align-items: center; */
+  margin-right: 620px;
+  margin-left: 100px;
+}
+.K1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
+.K11 {
+  background-color: #03a96b;
+  width: 8px;
+  height: 60px;
+  margin-top: 15px;
+}
+
+.K12 {
+  font-size: 25px;
+  color: #212529;
+  text-align: center;
+  font-family: "Prompt";
+  margin-top: 18px;
+  font-weight: 500;
+  margin-left: 20px;
+}
+.K13 {
+  height: fit-content;
+  background-color: #05aa6d;
+  width: 100px;
+  text-align: center;
+  border-radius: 15px;
+  color: #c9cce7;
+  font-family: "Prompt";
+  margin-left: 15px;
+  margin-top: 18px;
+}
+.K14 {
+  font-family: "Prompt";
+  background-color: #4c4f52;
+  height: fit-content;
+  width: 80px;
+  color: #c9cce7;
+  text-align: center;
+  border-radius: 15px;
+  margin-left: 5px;
+  margin-top: 18px;
+}
+.K2 {
+  display: flex;
+  align-items: center;
+}
+.K21 {
+  font-family: "Prompt";
+  font-weight: 500;
+  font-size: 18px;
+  background-color: #b9c5d1;
+  width: 130px;
+  text-align: center;
+  border-radius: 5px;
+}
+.K22 {
+  background-color: #03a96c;
+  width: 5px;
+  height: 40px;
+  margin-left: 5px;
+}
+.K23 {
+  font-family: "Prompt";
+  font-size: 22px;
+  margin-left: 5px;
+}
 .z {
   display: flex;
   height: 100%;
+  width: 700px;
+}
+.Inputbox {
+  display: flex;
+  margin: 20px;
+}
+.BeforeNumber {
+  background-color: #535554;
+  height: 100%;
+  width: 10px;
 }
 .ZoneNumber {
   width: 70px;
   height: 100%;
-  border-radius: 10px;
-  background-color: #0b6069;
+
+  background-color: #b9c8cf;
   font-family: "Prompt";
   font-size: 50px;
   display: flex;
   justify-content: center;
-  color: #dbd8d8;
+  color: #212529;
   text-align: center;
   align-items: center;
   font-weight: 600;
+}
+.BodyZone {
+  display: flex;
+  background-color: #c4c9c6;
+  width: 800px;
 }
 .ZoneQuestion {
   margin-left: 10px;
@@ -239,7 +355,7 @@ body {
   align-items: center;
 }
 .ZoneButton {
-  margin-left: 10px;
+  /* margin-left: 50px; */
   width: 250px;
   height: 100%;
   align-items: center;
@@ -247,7 +363,7 @@ body {
   display: flex;
 }
 .B1 {
-  background-color: #4b4646;
+  background-color: #8da4c2;
   /* background-color: #03a96b; */
   color: #e4e6e5;
   border-radius: 10px;
@@ -255,11 +371,12 @@ body {
   width: 120px;
   height: 60px;
   font-family: "kanit", sans-serif;
+  border-color: aqua;
 }
 .B1:hover {
-  background-color: rgba(0, 0, 0, 0.664);
-  transform: translateY(-7px);
-
+  background-color: rgb(255, 255, 255);
+  /* transform: translateY(-7px); */
+  color: #060707;
   transition: all 0.3s ease-in-out 0s;
 }
 .iconB {
@@ -268,7 +385,7 @@ body {
   margin-right: 2px;
 }
 .B2 {
-  background-color: #4ebd6a;
+  background-color: #90949293;
   margin-left: 10px;
   color: #e4e6e5;
   border-radius: 10px;
@@ -276,27 +393,17 @@ body {
   width: 120px;
   height: 60px;
   font-family: "kanit", sans-serif;
+  font-weight: 500;
+  font-size: 19px;
 }
 .B2:hover {
   background-color: #f5f3f3f5;
-  transform: translateY(-7px);
+  /* transform: translateY(-7px); */
   transition: all 0.3s ease-in-out 0s;
 
   color: #161817;
 }
 
-.nameCV2 {
-  font-family: "Prompt";
-  font-size: 18px;
-  color: #dee6df;
-  background-color: #03a96b;
-  width: 200px;
-  height: 30px;
-  align-items: center;
-  border-radius: 8px;
-  margin-left: 20px;
-  margin-top: 8px;
-}
 .itemQ {
   font-family: "Prompt";
   font-size: 20px;
@@ -321,7 +428,8 @@ body {
   text-align: center;
 } */
 .newAnswer {
-  text-align: center;
+  /* text-align: center; */
+  margin-left: 30px;
 }
 .Answer.B1:hover {
   border-style: none;
@@ -356,223 +464,263 @@ body {
   width: 80px;
 }
 .ZoneHead {
-  width: 100vw;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
+  /* width: fit-content; */
 }
-
+.positionB {
+  text-align: center;
+}
 .BackHome {
   width: 130px;
-  height: 30px;
+  height: 40px;
   font-family: "Prompt";
-  border-radius: 2px;
+  border-radius: 5px;
   color: rgb(92, 87, 87);
-  margin-right: 30px;
-  margin-top: 10px;
+  margin-top: 15px;
   border: 1px solid;
   border-color: rgb(150, 141, 141);
-  justify-content: flex-end;
-  display: flex;
-  align-items: center;
-
-  /* position: static; */
-}
-.BackHome:hover {
-  font-family: "Prompt";
-  border-radius: 2px;
-  color: rgb(0, 0, 0);
-  background-color: rgba(188, 194, 188, 0.925);
+  transition: all 0.3s ease-in-out 0s;
 }
 
 /*                 RESPONSIVE                             */
-@media (max-width: 480px) {
-  .pageA-grid {
-    flex-direction: column;
-    text-align: center;
-  }
-
-  /* PAGE A */
-  .BoxPageA {
+@media (max-width: 1024px) {
+  .Grid {
     width: 100vw;
-    border-style: solid;
-    border-width: 10px;
-    border-color: rgb(240, 233, 233);
-    border-radius: 10px;
-    flex-direction: column;
-    align-items: center;
-    display: flex;
-    background-color: #fdfdfd;
-    float: left;
+    height: 100vh;
   }
-  .Box2PageA {
-    width: 410px;
-    height: 500px;
-    flex-direction: column;
-    align-items: center;
-    display: flex;
-    background-color: #fdfdfd;
+  .GridMain {
+    width: 100vw;
   }
-  .SelectCommunity {
+  .GridRight {
+    display: none;
+  }
+  .GridLeft {
+    width: 0vw;
+  }
+  .HostLine {
+    width: 100vw;
     margin: 0;
-    font-size: 15px;
   }
-  .wrapButton {
-    height: 100%;
-    display: flex;
-    justify-content: center;
+  .Inbox {
+    width: 100vw;
+    height: 100vh;
+  }
+  .sizeBox {
+    width: 100vw;
   }
   .buttonCom {
-    margin: 0.2em;
-    width: 250px;
-    height: 60px;
-    letter-spacing: 2px;
+    width: 450px;
   }
-  .CommunityName {
-    font-family: "kanit", sans-serif;
-    margin-left: 10px;
-    text-align: center;
-    font-size: 15px;
-    color: rgb(255, 255, 255);
-    margin-top: 10px;
-    background-color: none;
-    border-radius: 20px;
+  .BackHome {
+    position: absolute;
+    margin-left: 620px;
+    margin-top: 30px;
   }
-  /* PageBversion2 */
+  .ZoneHead {
+    margin: 0;
+    width: 100vw;
+  }
+  .HostK {
+    width: 100vw;
+    margin: 0;
+    display: flex;
+    justify-content: flex-start;
+  }
+  .K1 {
+    width: 100vw;
+    margin: 0;
+    justify-content: flex-start;
+  }
+  .K2 {
+    width: 100vw;
+    margin: 0;
+    justify-content: flex-start;
+  }
+  .Inbox2 {
+    width: 100vw;
+    height: 100vh;
+    margin-right: 5px;
+  }
 
-  .version2 {
-    max-height: 100hv;
+  .BeforeNumber {
+    width: 5px;
+  }
+  .BodyZone {
+    display: flex;
+  }
+  .ZoneQuestion {
+    width: 350px;
+  }
+  .ZoneButton {
+    display: flex;
+    margin: 0;
+    margin-left: 33px;
+  }
+}
+@media (max-width: 480px) {
+  .Grid {
+    display: grid;
+    width: 100vw;
+    height: 100vh;
+  }
+  .GridLeft {
+    display: none;
+  }
+  .GridRight {
+    display: none;
+  }
+  .GridMain {
+    /* border: 5px solid rgb(248, 240, 240); */
+    height: 100vh;
+  }
+  .HostLine {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    height: 150px;
+  }
+  .Line1 {
+    flex-direction: column;
+    margin: 0;
+  }
+  .L11 {
+    height: 5px;
+    width: 100vw;
+    margin: 0;
+    display: none;
+  }
+  .L12 {
+    font-size: 20px;
+    margin: 0;
+    margin-top: 10px;
+  }
+  .L13 {
+    margin: 0;
+  }
+  .Line2 {
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+  }
+  .L21 {
+    margin: 0;
+  }
+  .L22 {
+    margin-top: 5px;
+    margin: 0;
+  }
+  .sizeBox {
+    flex-direction: column;
+    width: 100vw;
+  }
+  .tab {
+    height: 10px;
+    width: 100vw;
+  }
+  .numberIndex {
+    height: fit-content;
+    width: 100vw;
+    margin: 0;
+    font-size: 20px;
+  }
+  .buttonCom {
+    margin: 0;
+    width: 100vw;
+  }
+  .KNP {
+    width: 100vw;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+  }
+  .keyNextpage {
+    margin: 0;
+    margin-top: 10px;
   }
   .ZoneHead {
     width: 100vw;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
   }
-  .BackHome {
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    margin-left: 30px;
-  }
-  .BoxUser {
-    width: 340px;
-    height: 200px;
-    margin-right: 7px;
-  }
-  .nameCV2 {
-    font-size: 18px;
-    border-radius: 8px;
-    margin-left: 60px;
-    justify-content: center;
-    align-items: center;
-    justify-items: center;
-    display: flex;
-  }
-  .CommunityV2 {
-    /* position: absolute; */
-    width: 340px;
-    display: flex;
-    flex-direction: column;
-    margin-right: 0px;
-    /* margin: 0 auto; */
-  }
-  .ZoneNumber {
-    width: 100%;
-    height: 35px;
-    border-radius: 10px;
-    font-family: "Prompt";
-    font-size: 25px;
-    font-weight: 700;
-  }
-  .ZoneQuestion {
-    width: 300px;
-    position: absolute;
-    margin-top: 40px;
-    height: 10vh;
-  }
-  .itemQ {
-    font-size: 18px;
-  }
-  .ZoneButton {
-    width: 250px;
-    height: 60px;
-    margin-top: 130px;
-    position: absolute;
-    margin-left: 50px;
-  }
-  .Answer {
-    width: 300px;
-    height: 25px;
-    font-size: 15px;
-    color: #000000;
-    border-style: none;
-  }
-  .btn-info {
-    /*ปุ่ม บันทึก*/
-    position: absolute;
-    width: 85px;
-    margin-left: 1px;
-  }
-  .btn-light {
-    /*ย้อนกลับ*/
-    position: none;
-    margin-left: 100px;
-  }
-  /* Modal  */
-  .TextareaModalText {
-    height: 150px;
-    width: 300px;
-    margin-left: 28px;
-    background-color: rgb(179, 238, 151);
-    color: rgb(66, 61, 61);
-    font-family: "kanit", sans-serif;
-    border-style: none;
-    padding: 0.5em;
-    clear: both;
-    justify-content: center;
-  }
-}
-@media (min-width: 600px) {
-  .SelectCommunity {
-    width: 400px;
+  .HostK {
+    width: 100vw;
     margin: 0;
   }
-  .BoxUser {
-    width: 700px;
-    height: 100px;
-    background-color: #6b6e6b8f;
-    border-radius: 10px;
-    cursor: pointer;
-
-    margin-top: 20px;
+  .K1 {
+    flex-direction: column;
+  }
+  .K11 {
+    display: none;
+  }
+  .K12 {
+    width: 100vw;
+    margin: 0;
+  }
+  .K13 {
+    margin: 0;
+  }
+  .K14 {
+    margin: 0;
+  }
+  .K2 {
+    flex-direction: column;
+  }
+  .K21 {
+    margin: 0;
+  }
+  .K22 {
+    width: 100vw;
+    height: 3px;
+    margin: 0;
+    display: none;
+    /* text-decoration: #; */
+  }
+  .K23 {
+    margin: 0;
+  }
+  .Inbox2 {
+    width: 100vw;
+  }
+  .Inputbox {
+    margin: 0;
+    width: 100vw;
+    flex-direction: column;
+  }
+  .BeforeNumber {
+    margin-top: 15px;
+    width: 100vw;
+    height: 10px;
+  }
+  .ZoneNumber {
+    width: 100vw;
+    font-size: 20px;
+    height: fit-content;
+  }
+  .BodyZone {
+    flex-direction: column;
+    margin: 0;
+    width: 100vw;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+  .ZoneQuestion {
+    width: 100vw;
+  }
+  .itemQ {
+    width: 100vw;
   }
   .B1 {
-    width: 90px;
-    height: 60px;
+    width: 100px;
+    height: 40px;
   }
-
   .B2 {
-    width: 80px;
-    height: 60px;
+    width: 100px;
+    height: 40px;
   }
 }
-@media (min-width: 1030px) {
-  .BoxUser {
-    width: 900px;
-    height: 100px;
-    background-color: #6b6e6b8f;
-    border-radius: 10px;
-    cursor: pointer;
-    /* margin-left: 325px; */
-    margin-top: 20px;
-  }
-  .B1 {
-    width: 120px;
-    height: 60px;
-  }
-  .B2 {
-    width: 120px;
-    height: 60px;
-  }
+
+@media (max-width: 1020px) {
 }
